--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = playmedia
-version = 0.0.2
+version = 0.0.3
 author = Satvik Virmani
 author_email = virmanisatvik01@gmail.com
 description = A python package to play and control media files
@@ -17,9 +17,6 @@ classifiers =
 [options]
 package_dir =
     = src
-packages = find:
-python_requires = >=3.6
+packages = playmedia
+python_requires = >=3.0
 install_requires = python-vlc
-
-[options.packages.find]
-where = src
