updated to version 1.0.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,25 @@
 [metadata]
 name = playmedia
-version = 0.0.3
+version = 1.0.0
 author = Satvik Virmani
 author_email = virmanisatvik01@gmail.com
-description = A python package to play and control media files
+description = A python package to play and control media files.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/SatvikVirmani/playmedia
+license = MIT License
+url = https://github.com/satvikVirmani/playmedia
+download_url = https://github.com/satvikvirmani/playmedia/releases
 project_urls =
-    Bug Tracker = https://github.com/SatvikVirmani/playmedia/issues
+    Bug Tracker = https://github.com/satvikVirmani/playmedia/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
 
 [options]
-package_dir =
-    = src
+package_dir = .
 packages = playmedia
 python_requires = >=3.0
-install_requires = python-vlc
+install_requires = 
+    python-vlc
+    pretty-errors
